[package]
name = "scoopit-api"
version = "0.17.0"
authors = ["Philippe GASSMANN <philippe.gassmann@scoop.it>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust client for www.scoop.it REST API"
repository = "https://github.com/Scoopit/scoopit-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }

reqwest = { version = "0.13.2", features = [
    "rustls",
    "json",
    "form",
], default-features = false }
tokio = { version = "^1.5", features = ["time", "sync", "rt"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
jsonwebtokens = "1"
percent-encoding = "2.1"
url = { version = "2", features = ["serde"] }
serde_json = "1"

[dev-dependencies]
dotenvy = "0.15.0"
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11"
serde_json = "1"
